<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AdminActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdmin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/esquinas_redondeadas_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoTBAdmin"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/icono_toolbar"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo1"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="6dp" />

        <ImageButton
            android:id="@+id/iBtnExitAdmin"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boton_salir_valve_control"
            android:scaleType="centerInside"
            android:scaleX="0.6"
            android:scaleY="0.6"
            app:srcCompat="@drawable/exit"
            android:layout_marginEnd="10dp"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="347dp"
            tools:layout_editor_absoluteY="5dp" />

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAdmin">

        <Button
            android:id="@+id/btn1Admin"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/esquinas_redondeadas2"
            android:text="@string/asignar_cuota_anual" />

        <Button
            android:id="@+id/btnAdmin2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_gravity="center"
            android:background="@drawable/esquinas_redondeadas2"
            android:text="@string/ampliar_cuota" />

        <Button
            android:id="@+id/btnAdmin3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/esquinas_redondeadas2"
            android:text="@string/resetear_consumo" />

        <Button
            android:id="@+id/btnAdmin4"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/esquinas_redondeadas2"
            android:text="@string/resetear_cuota" />

        <Button
            android:id="@+id/btnAdmin5"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/esquinas_redondeadas2"
            android:text="@string/consumo_actual" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>