<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LogInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbAcceso"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/esquinas_redondeadas_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoTBLogIn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/icono_toolbar"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo1"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="1dp" />

        <ImageButton
            android:id="@+id/btnExitLogIn"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boton_cerrar_app"
            android:scaleType="centerInside"
            android:scaleX="0.6"
            android:scaleY="0.6"
            app:srcCompat="@drawable/exit"
            tools:ignore="TouchTargetSizeCheck"
            android:layout_marginEnd="10dp"/>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/pasword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:text="@string/juan123"
            android:textColor="#1E4D00"
            android:textColorHint="#29CC00"
            android:textColorLink="#29CC00" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbAcceso">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsuario"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/juan"
            android:textColor="#1E4D00"
            android:selectAllOnFocus="true"
            android:textColorHint="#29CC00"
            android:textColorLink="#29CC00"
            tools:ignore="TextSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/esquinas_redondeadas2"
        android:elevation="20dp"
        android:text="@string/acceder"
        android:textColor="#1E4D00"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPass" />


</androidx.constraintlayout.widget.ConstraintLayout>