<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:background="@drawable/esquinas_redondeadas"
    android:layout_margin="8dp">


    <TextView
        android:id="@+id/tv_numeroParcela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="#183E00"
        android:textStyle="bold"
        android:textSize="18sp"
        tools:text="@string/nombre_usuario" />


    <TextView
        android:id="@+id/tv_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_numeroParcela"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:maxWidth="200dp"
        android:textColor="#183E00"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="@string/id_de_usuario" />

    <TextView
        android:id="@+id/tv_numeroHidrante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="60dp"
        android:textColor="#183E00"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/cuota_usuario_asignada" />
</RelativeLayout>