<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ValveControlActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarStats"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/esquinas_redondeadas_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoTBLogIn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/icono_toolbar"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo1"/>

        <ImageButton
            android:id="@+id/iBtnExitStats"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boton_salir_valve_control"
            android:scaleType="centerInside"
            android:scaleX="0.6"
            android:scaleY="0.6"
            app:srcCompat="@drawable/exit"
            tools:ignore="TouchTargetSizeCheck"
            android:layout_marginEnd="15dp"/>

        <ImageButton
            android:id="@+id/ibtnStats"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boton_estadisticas"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/stats"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="304dp"
            tools:layout_editor_absoluteY="7dp"
            android:layout_marginEnd="20dp"/>
    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/listViewHydrants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarStats"
        android:dividerHeight="8dp"
        android:divider="#00000000"/>
</androidx.constraintlayout.widget.ConstraintLayout>